--- a/src/template/index.mustache
+++ b/src/template/index.mustache
@@ -10,7 +10,7 @@
   {{/link}}
   */
 {{/comment}}
-{{#export}}export{{/export}} {{struct}} {{{name}}} {{#isTypeStruct}}={{/isTypeStruct}} {
+{{#export}}export{{/export}} {{#isTypeStruct}}declare{{/isTypeStruct}} {{struct}} {{{name}}} {{#isTypeStruct}}={{/isTypeStruct}} {
   {{#fields}}
   {{#comment}}
   /**
